--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -1,3 +1,28 @@
+ <!-- Modal -->
+ <div class="modal fade" id="aboneol" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Dergimize Abone Ol</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <div class="mailde">
+                  <div class="col-md-8 m-auto"><img class="img-fluid" src="/img/markut-mailde.svg" alt="Markut Mailde İllustrasyon"></div>
+                  <div class="mailde-title">Dergimize Abone Olun</div>
+                  <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
+                  <form name="abonelik" method="POST" data-netlify="true" action="/basarili/">   
+                    <label><input type="text" name="email" class="form-control form-email" placeholder="Mail Adresiniz" required></label>
+                    <button type="submit" class=" btn markutbtn">Abone Ol</button><br>
+                    <small>ücretsizdir.</small>
+                </form>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
 <footer><hr><div class="container">   
         <div class="footericon"><img src="/img/logo-color.svg" alt="Markut Logo"></div>
         <div class="footerlogo">MARKUT</div>
