--- a/themes/Markut/layouts/partials/header-sayi.html
+++ b/themes/Markut/layouts/partials/header-sayi.html
@@ -41,6 +41,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/hakkimizda/">hakkımızda</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" data-toggle="modal" data-target="#aboneol">abone ol</a>
+            </li>
             <li><div class="custom-control custom-switch">
               <input type="checkbox" class="custom-control-input" id="darkSwitch" />
               <label class="custom-control-label" for="darkSwitch">Dark</label>
