--- a/themes/Markut/layouts/partials/header.html
+++ b/themes/Markut/layouts/partials/header.html
@@ -12,17 +12,19 @@
       <!--  Use flexbox utility classes to change how the child elements are justified  -->
         <div class="collapse navbar-collapse justify-content-between" id="navbarToggle">
           <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/bize-gonder/">bize gönder</a>
+            </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/hakkimizda/">hakkımızda</a>
                 </li>
-    
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="/iletisim/">iletişim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/bize-gonder/">bize gönder</a>
+              <a class="nav-link" href="#" data-toggle="modal" data-target="#aboneol">abone ol</a>
             </li>
             <li><div class="custom-control custom-switch">
               <input type="checkbox" class="custom-control-input" id="darkSwitch" />
