--- a/themes/Markut/layouts/partials/header.html
+++ b/themes/Markut/layouts/partials/header.html
@@ -4,7 +4,7 @@
      
       <!--  Show this only on mobile to medium screens  -->
       <nav>
-        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarToggle">
           <span class="">menü</span>
         </button>
       </nav>
