--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -39,7 +39,7 @@
         </ul>
         <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a> | Copyright © 2020 | Markut tarafından tasarlandı.</div>
     </div></footer>
-    <script data-cfasync="false" type="text/javascript" src="{{.Site.BaseURL}}js/form-submission-handler.js"></script>
+    <script data-cfasync="false" src="{{.Site.BaseURL}}js/form-submission-handler.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="{{.Site.BaseURL}}bootstrap/bootstrap.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
