--- a/themes/Markut/layouts/partials/header-sayi.html
+++ b/themes/Markut/layouts/partials/header-sayi.html
@@ -1,10 +1,9 @@
-<body>
       <header>
     <nav class="navbar navbar-expand-lg fixed-top markutnav">
       <a class="navbar-brand " href="{{.Site.BaseURL}}"><div class="logo">MARKUT</div></a>
       <!--  Show this only on mobile to medium screens  -->
       <nav>
-        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarToggle">
           <span class="">menü</span>
         </button>
       </nav>
@@ -14,7 +13,7 @@
           <ul class="navbar-nav">
             <!-- Dropdown -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle kirmizi" href="#" id="navbardrop" data-toggle="dropdown">
+              <a class="nav-link dropdown-toggle kirmizi" href="#" data-toggle="dropdown">
                sayı {{.Params.sayi}}
               </a>
               <div class="dropdown-menu">
@@ -24,7 +23,7 @@
             </li>   
              <!-- Dropdown İçindekiler -->
              <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle kirmizi" href="#" id="navbardrop" data-toggle="dropdown">
+               <a class="nav-link dropdown-toggle kirmizi" href="#" data-toggle="dropdown">
                  içindekiler
                </a>
                <div class="dropdown-menu">
