--- a/themes/Markut/layouts/_default/list.html
+++ b/themes/Markut/layouts/_default/list.html
@@ -5,12 +5,11 @@
         <header class="page-header markutcontent"><h1>{{ .Title }}</h1><div class="title list-inline-item"><a href="/tags/">Etiketler Sayfasına Geri Dönün</a></div></header>
         <div class="container toc">
             {{ range .Pages }}
-            <article>
+            <article> <a href="{{ .Permalink }}">
                 <img class="img-fluid thumb" src="{{.Params.thumb}}" alt="">
-                <a href="{{ .Permalink }}"><h2 class="title">{{ .Title | markdownify }}</h2></a>
+                <h2 class="title">{{ .Title | markdownify }}</h2>
                 <p class="yazar">{{ .Params.yazar }} | {{.Params.tarih}}</p>
-                <p class="desc">{{ .Summary | plainify | htmlUnescape }}...</p>
-              <a href="{{ .Permalink }}"><button class="btn markutbtn" type="button">yazıyı oku</button></a>
+                <p class="desc">{{ .Summary | plainify | htmlUnescape }}...</p></a>
             </article>
             {{ end }}
         </div>
