--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -63,5 +63,6 @@
              }
         </script>
     {{ end }}
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
     <body>
