--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -1,7 +1,7 @@
  <!-- Modal -->
  <div class="modal fade" id="aboneol" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
+    <div class="modal-content modalback">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLongTitle">Dergimize Abone Ol</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -23,7 +23,7 @@
     </div>
   </div>
 </div>
-<footer><hr><div class="container">   
+<footer><hr><div class="container">  
         <div class="footericon"><img src="/img/logo-color.svg" alt="Markut Logo"></div>
         <div class="footerlogo">MARKUT</div>
         <div class="footersur">Marmara Kreatif Ürün Tasarım Ekibi</div>
