--- a/themes/Markut/layouts/partials/header-sayi.html
+++ b/themes/Markut/layouts/partials/header-sayi.html
@@ -45,7 +45,7 @@
             </li>
             <li><div class="custom-control custom-switch">
               <input type="checkbox" class="custom-control-input" id="darkSwitch" />
-              <label class="custom-control-label" for="darkSwitch">Dark</label>
+              <label class="custom-control-label" for="darkSwitch">dark</label>
             </div></li>
           </ul>
         </div>
