--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -642,6 +642,10 @@ article a:hover {
 	background-color: transparent;
 	border: 1px solid #eee;
   }
+  [data-theme="dark"] .modalback{
+	background-color: rgb(27, 27, 27) !important;
+  }
+  
   @media screen and (max-width: 768px){
 	.gecis .title{
 		font-size: 18px;
