veriler tag den değil sayi dan çekiliyor

--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -38,7 +38,7 @@
                 <div class="col-md-6">
                         <div class="icindekiler">içindekiler</div>
                         <ul class="list-group">
-                        {{ range first 20 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.tags" "intersect" .Params.tags ) "Permalink" "!=" .Permalink ) }}  
+                        {{ range first 20 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.sayi" "intersect" .Params.sayi ) "Permalink" "!=" .Permalink ) }}  
                         <li class="list-group-item contents">{{ .Title | markdownify }}</li>                        
                         {{ end }}
                         </ul><a href="{{ .Permalink }}" class="btn markutbtn" type="button">sayıyı oku</a>
