--- a/themes/Markut/layouts/kapak/single.html
+++ b/themes/Markut/layouts/kapak/single.html
@@ -20,7 +20,7 @@
         
  <div class="container toc">
   <div class="icindekiler">içindekiler.</div>
-  {{ range first 20 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.tags" "intersect" .Params.tags ) "Permalink" "!=" .Permalink ) }}
+  {{ range first 20 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.sayi" "intersect" .Params.sayi ) "Permalink" "!=" .Permalink ) }}
   <div class="icsay">{{.Params.sayfa}}</div> <a href="{{ .RelPermalink }}"><h2 class="title">{{ .Title | markdownify }}</h2></a>
   <p class="yazar">{{ .Params.yazar }}</p>
   <p class="desc">{{ .Params.aciklama | markdownify }}</p>
