--- a/themes/Markut/layouts/partials/header-sayi.html
+++ b/themes/Markut/layouts/partials/header-sayi.html
@@ -43,7 +43,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#" data-toggle="modal" data-target="#aboneol">abone ol</a>
             </li>
-            <li><div class="custom-control custom-switch">
+            <li class="nav-item"><div class="custom-control custom-switch">
               <input type="checkbox" class="custom-control-input" id="darkSwitch" />
               <label class="custom-control-label" for="darkSwitch">dark</label>
             </div></li>
