--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -24,25 +24,25 @@ p{
 }
 h1{
   font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 400;
+  font-weight: 700;
   letter-spacing: 7px;
   margin-top: 50px;
 }
 h2{
 	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 400;
+	font-weight: 700;
 	letter-spacing: 5px;
 	margin-top: 50px;
   }
 h3{
 	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 400;
+	font-weight: 700;
 	letter-spacing: 3px;
 	margin-top: 50px;
   }
 h4{
 	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 400;
+	font-weight: 700;
 	letter-spacing: 2px;
 	margin-top: 50px;
   }
@@ -144,6 +144,7 @@ img{
 .logo{
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 32px;
+	font-weight: 400;
 	letter-spacing: 8px;
 	margin-top: -22px;
 	text-align: center;
@@ -163,7 +164,8 @@ img{
 	  font-size: 16px;
 	  letter-spacing: 1px;
 	  color: #000;
-	  padding-left: 5px
+	  padding-left: 5px;
+	  margin: 0 auto;
   }
   .custom-control-label{
 	font-family: 'Roboto Condensed', sans-serif;
@@ -671,6 +673,10 @@ article a:hover {
 	}
 	.markutcover{
 		margin-top: -25px;
+	}
+	.nav-item{
+		padding-top: 25px;
+		font-size: 20px;
 	}
 }
 @media screen and (max-width:425px){
