--- a/static/admin/styles.css
+++ b/static/admin/styles.css
@@ -80,7 +80,24 @@ h6 {
 .display-4 {
 	font-size: 2em;
 }
-
+blockquote {
+	background: #f9f9f9;
+	border-left: 5px solid #ccc;
+	margin: 1.5em 5px;
+	padding: 0.5em 10px;
+	quotes: "\201C""\201D""\2018""\2019";
+  }
+  blockquote:before {
+	color: #ccc;
+	content: open-quote;
+	font-size: 4em;
+	line-height: 0.1em;
+	margin-right: 0.25em;
+	vertical-align: -0.4em;
+  }
+  blockquote p {
+	display: inline;
+  }
 @media (min-width: 48em) {
 	h1 {
 	  font-size: 2.441em;
@@ -144,6 +161,7 @@ img{
 .logo{
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 32px;
+	font-weight: 400;
 	letter-spacing: 8px;
 	margin-top: -22px;
 	text-align: center;
@@ -163,7 +181,8 @@ img{
 	  font-size: 16px;
 	  letter-spacing: 1px;
 	  color: #000;
-	  padding-left: 5px
+	  padding-left: 5px;
+	  margin: 0 auto;
   }
   .custom-control-label{
 	font-family: 'Roboto Condensed', sans-serif;
@@ -642,8 +661,8 @@ article a:hover {
 	background-color: transparent;
 	border: 1px solid #eee;
   }
-  [data-theme="dark"] .modal-content {
-	background-color: rgb(41, 41, 41) !important;
+  [data-theme="dark"] .modalback{
+	background-color: rgb(27, 27, 27) !important;
   }
   
   @media screen and (max-width: 768px){
@@ -671,6 +690,22 @@ article a:hover {
 	}
 	.markutcover{
 		margin-top: -25px;
+	}
+	.nav-item{
+		padding-top: 25px;
+		font-size: 20px;
+	}
+	h1{
+		letter-spacing: 3px;
+	}
+	h2{
+		letter-spacing: 2px;
+	}
+	h3{
+		letter-spacing: 2px;
+	}
+	h4{
+		letter-spacing: 2px;
 	}
 }
 @media screen and (max-width:425px){
