--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -80,7 +80,24 @@ h6 {
 .display-4 {
 	font-size: 2em;
 }
-
+blockquote {
+	background: #f9f9f9;
+	border-left: 5px solid #ccc;
+	margin: 1.5em 5px;
+	padding: 0.5em 10px;
+	quotes: "\201C""\201D""\2018""\2019";
+  }
+  blockquote:before {
+	color: #ccc;
+	content: open-quote;
+	font-size: 4em;
+	line-height: 0.1em;
+	margin-right: 0.25em;
+	vertical-align: -0.4em;
+  }
+  blockquote p {
+	display: inline;
+  }
 @media (min-width: 48em) {
 	h1 {
 	  font-size: 2.441em;
@@ -677,6 +694,18 @@ article a:hover {
 	.nav-item{
 		padding-top: 25px;
 		font-size: 20px;
+	}
+	h1{
+		letter-spacing: 3px;
+	}
+	h2{
+		letter-spacing: 2px;
+	}
+	h3{
+		letter-spacing: 2px;
+	}
+	h4{
+		letter-spacing: 2px;
 	}
 }
 @media screen and (max-width:425px){
