--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -98,6 +98,13 @@ blockquote {
   blockquote p {
 	display: inline;
   }
+  a {
+	color: #333333;
+	font-family: 'Roboto Condensed', sans-serif;
+}
+a:hover {
+	color: #000000;
+}
 @media (min-width: 48em) {
 	h1 {
 	  font-size: 2.441em;
@@ -148,7 +155,7 @@ img{
 }
 
 .sari{
-  color: #f7c421
+  color: #f3c420
 }
 
 .kirmizi{
@@ -173,7 +180,7 @@ img{
   }
 
   .markutnav{
-	border: 1px solid #000;
+	border-bottom: 1px solid #000;
   }
 
   .nav-item{
@@ -187,12 +194,14 @@ img{
   .custom-control-label{
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 16px;
-	padding-top: 3px;
+	padding-top: 2px;
   }
   a.nav-link{
 	  color: #000;
   }
-
+.mt-6{
+	margin-top: 6em;
+}
 .navbar-toggler {
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 14px;
@@ -237,10 +246,10 @@ img{
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 18px;
 	color: #000000;
-	letter-spacing: 3px;
+	letter-spacing: 1px;
 	border-color: #fff;
 	padding-left: 0px;
-	padding-top: 3px;
+	padding-top: 2px;
 }
 
 .markutbtn {
@@ -443,7 +452,7 @@ footer a:hover{
 }
 .onde .title:hover{
 	text-decoration: underline;
-	text-decoration-color: #AFAFAF;
+	text-decoration-color: #f3c420;
 }
 
 .onde .yazar{
@@ -460,7 +469,8 @@ footer a:hover{
 	color: #696969;
 }
 .gecis{
-	border: 1px solid #AFAFAF;
+	border-bottom: 1px solid #AFAFAF;
+	border-top: 1px solid #AFAFAF;
 	width: 100%;
 	height: 70px;
 	margin-top: 60px;
@@ -476,7 +486,7 @@ footer a:hover{
     margin-top: 36px;
 	margin-left: 50px;
 	text-shadow:
-	-1px -1px 0 #AFAFAF,  
+	-2px -2px 0 #000000,  
 	 1px -1px 0 #AFAFAF,
 	 -1px 1px 0 #AFAFAF,
 	  1px 1px 0 #AFAFAF;
@@ -484,10 +494,11 @@ footer a:hover{
 
 .gecis .title{
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 32px;
-	letter-spacing: 2.12px;
+	font-size: 42px;
+	letter-spacing: 2px;
 	margin-top: 5px;
-	color: #AFAFAF;
+	margin-bottom: 0px;
+	color: #1d1d1d;
 	scroll-snap-align: start;
 }
 .gecis .desc{
@@ -500,7 +511,7 @@ footer a:hover{
 	padding-left: 150px;
 }
 .titya a{
-	text-decoration-color: #AFAFAF;
+	text-decoration-color: #f3c420;
 }
 .markutcontent{
 	max-width: 800px;
@@ -536,7 +547,12 @@ footer a:hover{
 	color: #000000;
 	font-size: 12px;
 }
-
+.dropdown-menu{
+	border: none;
+}
+.dropdown-item{
+	padding: .25rem 0rem;
+}
 
 .mgen{
 	max-width: 700px;
@@ -559,6 +575,19 @@ footer a:hover{
 article a:hover {
 	text-decoration: none;
 }
+
+/* Blog başlangıç */
+.blog .title{
+	margin-top: 10px;
+}
+.blog .yazar{
+	font-family: 'Roboto Condensed', sans-serif;
+	margin-top: -5px;
+	margin-bottom: 20px;
+}
+
+
+
 
 .mailde{
 	margin: 0 auto;
@@ -583,7 +612,7 @@ article a:hover {
 .custom-switch{
 	margin-top: 7px;
 }
-[data-theme="dark"] {
+	[data-theme="dark"] {
 	background-color: rgb(27, 27, 27) !important;
 	color: #eee;
   }
@@ -629,6 +658,9 @@ article a:hover {
   [data-theme="dark"] .kapaklogo {
 	color: #eee;
   }
+  [data-theme="dark"] .nav-item {
+	color: #eee;
+  }
   [data-theme="dark"] .markutbtn {
 	background-color: transparent;
 	color: #eee;
@@ -639,7 +671,12 @@ article a:hover {
 	color: #000000;
   }
   [data-theme="dark"] .gecis .sayfa {
-	color: #000000;
+	color: #1b1b1b;
+	text-shadow: -2px -2px 0 #fdfffa, 1px -1px 0 #AFAFAF, -1px 1px 0 #AFAFAF, 1px 1px 0 #AFAFAF;
+}
+  
+  [data-theme="dark"] .gecis .title {
+	color: #eee;
   }
   [data-theme="dark"] .dropdown-menu {
 	background-color: #000000;
@@ -656,6 +693,7 @@ article a:hover {
 	background-color: transparent;
 	border: 1px solid #eee;
   }
+  
   [data-theme="dark"] textarea {
 	color: #eee;
 	background-color: transparent;
@@ -667,7 +705,7 @@ article a:hover {
   
   @media screen and (max-width: 768px){
 	.gecis .title{
-		font-size: 18px;
+		font-size: 28px;
 		line-break: 5px;
 		margin-top: 7px;
 	}
@@ -710,15 +748,17 @@ article a:hover {
 }
 @media screen and (max-width:425px){
 	.gecis .title{
-		font-size: 16px;
+		font-size: 24px;
 		line-break: 10px;
 		margin-top: 7px;
 	}
 	.gecis .sayfa{
 		margin-left: 5px;
+		font-size: 46px;
+		text-shadow: -2px -2px 0 #000000, 1px -1px 0 #AFAFAF, -1px 1px 0 #AFAFAF, 1px 1px 0 #AFAFAF;
 	}
 	.gecis .titya{
-		padding-left: 80px;
+		padding-left: 60px;
 	}
 	.gecis .desc{
 		font-size: 12px;
