--- a/themes/Markut/layouts/_default/_markup/render-image.html
+++ b/themes/Markut/layouts/_default/_markup/render-image.html
@@ -4,5 +4,7 @@
     <figcaption>{{ .Title }}</figcaption>
   </figure>
 {{ else }}
+<div class="markut-img">
   <img src="{{ .Destination | safeURL }}" alt="{{ .Text }}">
+</div>
 {{ end }}
