--- a/themes/Markut/layouts/dergi/list.html
+++ b/themes/Markut/layouts/dergi/list.html
@@ -57,10 +57,10 @@
         <div class="mailde-title">Dergimize Abone Olun</div>
         <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
         <form name="abonelik" method="POST" data-netlify="true" action="/basarili/">   
-          <label><input type="text" name="email" class="form-control form-email" placeholder="Mail Adresiniz" required></label>
-          <button type="submit" class=" btn markutbtn">Abone Ol</button><br>
-          <small>ücretsizdir.</small>
-      </form>
+                <label><input type="email" name="email" class="form-control form-email" id="email" placeholder="Mail Adresiniz" required></label>
+                <button type="submit" class="btn markutbtn">Abone Ol</button><br>
+                <small>ücretsizdir.</small>
+            </form>
 </div>
 {{.Content}}
 {{ partial "footer.html" . }}
