--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -41,8 +41,8 @@
         <div class="mailde-title">Dergimize Abone Olun</div>
         <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
         <form name="abonelik" method="POST" data-netlify="true" action="/basarili/">   
-          <label><input type="text" name="email" class="form-control form-email" placeholder="Mail Adresiniz" required></label>
-          <button type="submit" class=" btn markutbtn">Abone Ol</button><br>
+          <label><input type="email" name="email" class="form-control form-email" id="email" placeholder="Mail Adresiniz" required></label>
+          <button type="submit" class="btn markutbtn">Abone Ol</button><br>
           <small>ücretsizdir.</small>
       </form>
 </div>
