--- a/themes/Markut/layouts/dergi/list.html
+++ b/themes/Markut/layouts/dergi/list.html
@@ -52,15 +52,6 @@
         {{ end }}{{ end }}
 </div>
 
-<div class="mailde mt-5">
-        <div class="col-md-5 m-auto"><img class="img-fluid mt-5" src="/img/markut-mailde.svg" alt="Markut Mailde İllustrasyon"></div>
-        <div class="mailde-title">Dergimize Abone Olun</div>
-        <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
-        <form name="abonelik" method="POST" data-netlify="true" action="/basarili/">   
-                <label><input type="email" name="email" class="form-control form-email" id="email" placeholder="Mail Adresiniz" required></label>
-                <button type="submit" class="btn markutbtn">Abone Ol</button><br>
-                <small>ücretsizdir.</small>
-            </form>
-</div>
+{{ partial "abonelik.html" . }}
 {{.Content}}
 {{ partial "footer.html" . }}
