--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -36,14 +36,7 @@
  {{ end }}
  </div>
 </div>
-<center>
-        <b>Yeni sayıları kaçırmayın. Dergimize abone olun.</b> <br>
-        <form name="abonelik" method="POST" data-netlify="true" action="/basarili">     
-                  <label><input style="max-width: 300px; margin-top: 10px;" type="text" name="email" class="form-control" placeholder="Mail Adresiniz" required></label>
-                  <button type="submit" style="margin-top: -4px;" class=" btn btn-dark">Abone Ol</button>
-        </form>
-    </center>
 {{.Content}}
-
+{{ partial "abonelik.html" . }}
 
 {{ partial "footer.html" . }}
