--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -13,11 +13,11 @@
                   <div class="col-md-8 m-auto"><img class="img-fluid" src="/img/markut-mailde.svg" alt="Markut Mailde İllustrasyon"></div>
                   <div class="mailde-title">Dergimize Abone Olun</div>
                   <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
-                  <form name="abonelik-modal" method="POST" data-netlify="true" action="/basarili/">   
-                    <label><input type="email" name="email" class="form-control form-email" id="email" placeholder="Mail Adresiniz" required></label>
-                    <button type="submit" class="btn markutbtn">Abone Ol</button><br>
-                    <small>ücretsizdir.</small>
-                </form>
+                  <form name="abonelik" method="POST" data-netlify="true" action="/basarili">     
+                    <label><input type="text" name="email" class="form-control form-email" placeholder="Mail Adresiniz" required></label>
+                    <button type="submit" class="btn markutbtn">Abone Ol</button>
+                   </form>
+                   <small>ücretsizdir.</small>
           </div>
       </div>
     </div>
