--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -37,7 +37,7 @@ h2{
 h3{
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 700;
-	letter-spacing: 3px;
+	letter-spacing: 2px;
 	margin-top: 50px;
   }
 h4{
@@ -789,4 +789,13 @@ article a:hover {
 	.mailde-desc{
 		letter-spacing: 2px;
 	}
+}
+.bg-yellow{
+	background-color: #fff1c5;
+}
+.bg-green{
+	background-color: #e9ffda;
+}
+.bg-grey{
+	background-color: rgb(224, 224, 224);
 }
