--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -41,9 +41,9 @@
         </ul>
         <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a>  <a href="/dergi/">/dergi</a>  <a href="/blog/">/blog</a> | Copyright © 2020 | Markut tarafından tasarlandı.</div>
     </div></footer>
-    <script data-cfasync="false" src="{{.Site.BaseURL}}js/form-submission-handler.js"></script>
+    <script data-cfasync="false" src="{{.Site.BaseURL}}/js/form-submission-handler.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="{{.Site.BaseURL}}bootstrap/bootstrap.min.js"></script>
+    <script src="{{.Site.BaseURL}}/bootstrap/bootstrap.min.js"></script>
 <script> $(function()
     {
       $('#theform').submit(function(){
@@ -63,8 +63,8 @@
   gtag('config', 'UA-122967892-3');
 </script>
     {{end}}
-<script src="{{.Site.BaseURL}}js/jquery.clever-infinite-scroll.js"></script>
-<script src="{{.Site.BaseURL}}js/dark-mode-switch.min.js"></script>
+<script src="{{.Site.BaseURL}}/js/jquery.clever-infinite-scroll.js"></script>
+<script src="{{.Site.BaseURL}}/js/dark-mode-switch.min.js"></script>
 <script>
   $('#contentsWrapper').cleverInfiniteScroll({
       contentsWrapperSelector: '#contentsWrapper',
