--- a/themes/Markut/layouts/dergi/list.html
+++ b/themes/Markut/layouts/dergi/list.html
@@ -37,7 +37,7 @@
         <div class="row markutsayi post {{ .Scratch.Get `postClass` }}">
                 <div class="col-md-6">
                 <div class="markutcvr">
-                        <a href="{{ .Permalink }}"><img class="img-fluid" src="{{.Params.kapak}}" alt="Markut Sayı: {{.Params.Sayi}} Kapak Tasarımı"></a>
+                        <a href="{{ .Permalink }}"><img class="img-fluid" src="{{.Params.kapak}}" alt="Markut Sayı: {{ range .Params.sayi }}{{ . }}{{ end }} Kapak Tasarımı"></a>
                 </div>
                 </div>
                 <div class="col-md-6">
