--- a/themes/Markut/layouts/partials/header-sayi.html
+++ b/themes/Markut/layouts/partials/header-sayi.html
@@ -17,6 +17,7 @@
                sayı {{ range .Params.sayi }}{{ . }}{{ end }}
               </a>
               <div class="dropdown-menu">
+                <a class="dropdown-item" href="/sayi-2/">Sayı 02</a>
                 <a class="dropdown-item" href="/sayi-1/">Sayı 01</a>
                 <a class="dropdown-item" href="/sayi-0/">Sayı 00</a>
               </div>
