--- a/themes/Markut/layouts/dergi/list.html
+++ b/themes/Markut/layouts/dergi/list.html
@@ -47,7 +47,20 @@
         </div>
  {{ end }}
 </div>
-
+<div class="container onde mb-5">
+        <div class="icindekiler text-center">Dergiden Öne Çıkan Sayfalar</div>
+        <div class="row mt-5">
+         {{ range first 20 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.tags" "intersect" .Params.tags ) "Permalink" "!=" .Permalink ) }}
+         <div class="col-md-6 mt-5"><article>    
+       <a href="{{ .Permalink }}"><img class="img-fluid thumb" src="{{.Params.thumb}}" alt="{{ .Title | markdownify }}">   
+        <h2 class="title">{{ .Title | markdownify }}</h2>
+        <p class="yazar">{{- range $index, $element := .Params.yazar }}{{- with $.Site.GetPage "taxonomyTerm" (printf "yazar/%s" (urlize .)) }}{{ if gt $index 0 }}, {{ end }}<a href="{{ .Permalink }}">{{ .Params.title }}</a>{{ end }}{{ end }} | <time>{{ index $.Site.Data.months_data.months .Date.Month }} {{ .Date.Year }}</time></p>
+        <p class="desc">{{ .Params.aciklama | plainify | htmlUnescape }}</p>
+      </a>
+        </article></div>
+ {{ end }}
+ </div>
+</div>
 {{ partial "abonelik.html" . }}
 {{.Content}}
 {{ partial "footer.html" . }}
