--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -22,7 +22,7 @@
 </div>
 
 
-<div class="container onde">
+<div class="container onde mb-5">
         <div class="icindekiler text-center">Dergiden Öne Çıkan Sayfalar</div>
         <div class="row mt-5">
          {{ range first 20 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.tags" "intersect" .Params.tags ) "Permalink" "!=" .Permalink ) }}
